[feat] #162 - 일정 수정 api 구현 및 일정 조회 api 응답 수정, 새로운 엔티티 DiscardedSchedule 추가 (#176)
* [#162] refactor: 리졸버를 애플리케이션 단에 위치하도록 리팩터링

* [#162] feat: 일정 수정 api 컨트롤러단 작성

* [#162] feat(ScheduleUpdateCase): request 별 분기처리를 위한 enum 클래스 생성

* [#162] feat: scheduleId로 Schedule을 찾는 findById 메서드 생성

* [#162] feat: scheduleId로 반복요일을 찾는 메서드 생성

* [#162] feat: scheduleId로 반복요일을 찾는 메서드 생성

* [#162] feat: scheduleId와 date로 scheduleDetail을 삭제하는 메서드 생성

* [#162] feat: scheduleId와 date로 scheduleDetail을 삭제하는 메서드 생성

* [#162] refactor: child, parent의 404 에러코드를 schedule 도메인 내에 정의하도록 리팩터링

* [#162] refactor: 파라미터 타입 수정

* [#162] feat: 일정 수정 로직 서비스단 구현, success, error 코드 작성 (오리진 변경사항 머지를 위한 중간 커밋. 전체 구현 x)

* [#162] refactor: 메서드 리팩터링 및 오타 수정

* [#162] feat: 일정 수정 RecurringToRecurring 케이스 구현

* [#162] feat: Schedule에 반복일정 시작일자, 종료일자 필드 추가

* [#162] feat: 반복일정을 생성할 때 제일 빠른 반복요일의 일자로 repeatStartDate를 업데이트

* [#162] refactor: 스케쥴러 작동 시 반복 기간에 해당하는 반복일정만 scheduleDetail이 생성되도록 설정

* [#162] refactor: 일정 조회 api에서 response body에 반복 시작일자와 종료일자를 함께 내려주도록 수정

* [#162] refactor: RecurringToRecurring 케이스 리팩터링

* [#162] refactor: update -> change 도메인메서드명 변경

* [#162] refactor: 사용하지 않는 메서드 삭제

* [#162] refactor: 이후 일정을 포함하여 반복일정을 수정하는 case 코드 작성

* [#162] refactor: 기존 일정을 schedule -> originalSchedule로 네이밍 변경

* [#162] feat: 서비스단 일정 수정 로직 구현 완료, 일정 예외 테이블(DiscardedSchedule) 추가, 일정 추가 시 예외 일정과는 충돌이 무시되도록 수정

* [#162] feat: 일정 탭 조회 시 응답에 무시된 일정을 포함하여 반환

* [#162] feat: discardedSchedule에 포함된 일정은 scheduleDetail 생성 스케쥴러에서 생성되지 않도록 수정

* [#162] feat: 논리 오류 수정, 일정 추가 시 repeatStartDate를 입력받도록 수정

* [#162] feat: 일정 조회 api response에 scheduleId 포함

* [#162] refactor: 사용하지 않는 import 삭제, 오타 수정 등

* [#162] refactor: 충돌 검사 호출 위치 변경

* [#162] refactor: 논리 로직 수정

* [#162] refactor: 일정 수정 시 자기 자신은 충돌 검사 대상에서 제외

* [#162] refactor: 일정 조회 시 반복일정의 경우, 반복기간이 유효한 것만 처리

* [#162] refactor: enum타입 스트링으로 명시

* [#162] refactor: 반복일정 이번일정만 변경시, 생성된 scheduleDetail이 없다면 새로 생성 후 저장

* [#162] refactor: 일정을 조회할 때 반환하는 response 형식 수정, 반복일자의